# snmalloc

./: .bazelrc  BUILD.bazel  CMakeLists.txt  Cargo.toml  MODULE.bazel  README.md
.github/workflows/: bazel.yml  main.yml  rust.yml
docs/: heap-profiling-benchmarks.md  profiling-pmu.md
fuzzing/: BUILD.bazel
scripts/: dump_branch_hints.py
snmalloc-rs/: BUILD.bazel  Cargo.toml  README.md
snmalloc-rs/benches/: README.md  profile_bench.rs  stats_bench.rs
snmalloc-rs/scripts/: run-linux-pinned-bench.sh
snmalloc-rs/snmalloc-sys/: BUILD.bazel  Cargo.toml  build.rs  wrapper.h
snmalloc-rs/snmalloc-sys/src/: lib.rs
snmalloc-rs/snmalloc-sys/upstream/scripts/: dump_branch_hints.py
snmalloc-rs/src/: config.rs  lib.rs  pprof.rs  profile.rs  stats_dump.rs  streaming.rs
snmalloc-rs/tests/: dump_stats.rs  frontend_stats.rs  full_stats.rs  hotspot.rs  profile_accuracy.rs  profile_lifetime_histogram.rs  profile_pprof.rs  profile_pprof_roundtrip.rs  profile_realloc.rs  profile_runtime_config.rs  profile_snapshot.rs  profile_streaming.rs  profile_symbolize.rs  profile_viewer_roundtrip.rs  runtime_tunables.rs  sizeclass_histogram.rs
snmalloc-tools/: Cargo.toml  README.md
snmalloc-tools/src/: branch_hints.rs  joiner.rs  main.rs  rate_report.rs
src/snmalloc/backend_helpers/: backend_helpers.h  buddy.h  commitrange.h  commonconfig.h  fragstats.h  largebuddyrange.h  statsrange.h
src/snmalloc/global/: globalalloc.h  libc.h  runtime_config.h  stats_dump.h  stats_export.h  threadalloc.h
src/snmalloc/mem/: alloc_stats.h  corealloc.h  metadata.h
src/snmalloc/override/: runtime_config.cc  rust.cc  rust_profile.h  stats_dump.cc  stats_export.cc
src/snmalloc/pal/: pal_stack_walker.h
src/snmalloc/profile/: addr_lookup.h  allocation_sample_list.h  hooks.h  lifetime_histogram.h  node_pool.h  profile.h  record.h  reentrancy_guard.h  sampled_alloc.h  sampled_list.h  sampler.h
src/test/func/fast_path_counters/: fast_path_counters.cc
src/test/func/lazy_array_client_meta/: lazy_array_client_meta.cc
src/test/func/profile_e2e/: profile_e2e.cc
src/test/func/profile_h3_h4/: profile_h3_h4.cc
src/test/func/profile_integration/: profile_integration.cc
src/test/func/profile_overhead/: profile_overhead.cc
src/test/func/profile_realloc/: profile_realloc.cc
src/test/func/profile_record/: profile_record.cc
src/test/func/profile_remote_dealloc/: profile_remote_dealloc.cc
src/test/func/profile_sampler/: profile_sampler.cc
src/test/func/profile_streaming/: profile_streaming.cc
src/test/perf/profile_stress/: profile_stress.cc
src/test/perf/stack_walker_bench/: stack_walker_bench.cc
