load("@rules_cc//cc:defs.bzl", "cc_library")

_COMMON_DEFINES = [
    "SNMALLOC_CHECK_LOADS=false",
    "SNMALLOC_PAGEID=false",
    "SNMALLOC_STATS",
    "SNMALLOC_STATS_BASIC",
    "SNMALLOC_USE_WAIT_ON_ADDRESS=1",
]

_COMMON_COPTS = [
    "-std=c++20",
] + select({
    "@bazel_tools//src/conditions:windows": [],
    "//conditions:default": [
        "-fno-rtti",
        "-fomit-frame-pointer",
        "-ffunction-sections",
    ],
})

cc_library(
    name = "snmalloc_hdrs",
    hdrs = glob(["src/snmalloc/**/*.h"]),
    defines = _COMMON_DEFINES,
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)

_ALLOC_SHIM_SRCS = [
    "src/snmalloc/override/malloc.cc",
    "src/snmalloc/override/new.cc",
    "src/snmalloc/override/runtime_config.cc",
    "src/snmalloc/override/stats_dump.cc",
    "src/snmalloc/override/stats_export.cc",
]

# Bazel-native allocator shim. Mirrors CMake's snmallocshim-static archive
# without requiring rules_foreign_cc or a CMake install tree.
cc_library(
    name = "snmalloc",
    srcs = _ALLOC_SHIM_SRCS,
    copts = _COMMON_COPTS,
    defines = _COMMON_DEFINES + [
        "SNMALLOC_STATIC_LIBRARY_PREFIX=sn_",
    ],
    deps = [":snmalloc_hdrs"],
    visibility = ["//visibility:public"],
)

_RUST_SHIM_SRCS = [
    "src/snmalloc/override/rust.cc",
    "src/snmalloc/override/runtime_config.cc",
    "src/snmalloc/override/stats_dump.cc",
    "src/snmalloc/override/stats_export.cc",
]

# Bazel-native Rust shim archive. Mirrors CMake's snmallocshim-rust source
# set without requiring rules_foreign_cc or a CMake install tree.
cc_library(
    name = "snmalloc-rs",
    srcs = _RUST_SHIM_SRCS,
    copts = _COMMON_COPTS,
    defines = _COMMON_DEFINES,
    deps = [":snmalloc_hdrs"],
    visibility = ["//visibility:public"],
)

# Profile-enabled variant used by snmalloc_sys_profiling.
cc_library(
    name = "snmalloc-rs-profile",
    srcs = _RUST_SHIM_SRCS,
    copts = _COMMON_COPTS,
    defines = _COMMON_DEFINES + [
        "SNMALLOC_PROFILE",
    ],
    deps = [":snmalloc_hdrs"],
    visibility = ["//visibility:public"],
)
