load("@rules_cc//cc:defs.bzl", "cc_library")

# NB: SNMALLOC_STATS / SNMALLOC_STATS_BASIC are intentionally OFF here to match
# the CMake default (all stats tiers default OFF). Forcing BASIC on crashed
# consumers that use snmalloc as the global allocator: the per-thread
# AllocStats counters fault in `on_remote_dealloc` during thread teardown
# (reproduced on Linux/arm64 under Tokio). The heap-profiling path uses
# SNMALLOC_PROFILE (the Sampler), which is independent of the stats tiers, so
# leaving stats off does not affect profiling. A consumer that wants the stats
# counters can add the define on its own target.
_COMMON_DEFINES = [
    "SNMALLOC_CHECK_LOADS=false",
    "SNMALLOC_PAGEID=false",
    "SNMALLOC_USE_WAIT_ON_ADDRESS=1",
]

_COMMON_COPTS = [
    "-std=c++20",
] + select({
    "@bazel_tools//src/conditions:windows": [],
    "//conditions:default": [
        "-fno-rtti",
        "-fomit-frame-pointer",
        "-ffunction-sections",
    ],
})

cc_library(
    name = "snmalloc_hdrs",
    hdrs = glob(["src/snmalloc/**/*.h"]),
    strip_include_prefix = "src",
    visibility = ["//visibility:public"],
)

_ALLOC_SHIM_SRCS = [
    "src/snmalloc/override/malloc.cc",
    "src/snmalloc/override/new.cc",
    "src/snmalloc/override/runtime_config.cc",
    "src/snmalloc/override/stats_dump.cc",
    "src/snmalloc/override/stats_export.cc",
]

# Bazel-native allocator shim. Mirrors CMake's snmallocshim-static archive
# without requiring CMake or an install tree.
cc_library(
    name = "snmalloc",
    srcs = _ALLOC_SHIM_SRCS,
    copts = _COMMON_COPTS,
    local_defines = _COMMON_DEFINES,
    deps = [":snmalloc_hdrs"],
    alwayslink = True,
    visibility = ["//visibility:public"],
)

_RUST_SHIM_SRCS = [
    "src/snmalloc/override/rust.cc",
    "src/snmalloc/override/runtime_config.cc",
    "src/snmalloc/override/stats_dump.cc",
    "src/snmalloc/override/stats_export.cc",
]

# Bazel-native Rust shim archive. Mirrors CMake's snmallocshim-rust source
# set without requiring CMake or an install tree.
cc_library(
    name = "snmalloc-rs",
    srcs = _RUST_SHIM_SRCS,
    copts = _COMMON_COPTS,
    local_defines = _COMMON_DEFINES,
    deps = [":snmalloc_hdrs"],
    visibility = ["//visibility:public"],
)

# Profile-enabled variant used by snmalloc_sys_profiling.
cc_library(
    name = "snmalloc-rs-profile",
    srcs = _RUST_SHIM_SRCS,
    copts = _COMMON_COPTS,
    local_defines = _COMMON_DEFINES + [
        "SNMALLOC_PROFILE",
    ],
    deps = [":snmalloc_hdrs"],
    visibility = ["//visibility:public"],
)
