load("@rules_cc//cc:defs.bzl", "cc_test")

# Fuzz harness for snmalloc::memcpy and the scoped-allocator path.
#
# Important: we deliberately do NOT set `malloc = "//:snmalloc"` here.
# fuzztest's seed-evaluator spawns threads and runs `operator delete`
# during teardown; when the process-wide allocator is snmalloc AND
# `-fsanitize=address` is also live, ASAN intercepts the delete on
# memory that snmalloc owns and SIGSEGVs at SETUP time before any
# fuzz iteration runs (observed in CI under bazelisk + LLVM 18/19).
# Routing the test process' malloc/free through the system allocator
# keeps ASAN's shadow consistent; the snmalloc surface being fuzzed
# (`snmalloc::memcpy<true>`, `snmalloc::get_scoped_allocator()`,
# explicit `scoped->alloc<>()` / scoped destructor `free`) is
# exercised directly via the source under test and remains fully
# covered.
#
# Run with: bazel test -c opt --config=asan //fuzzing:snmalloc_fuzzer
cc_test(
    name = "snmalloc_fuzzer",
    srcs = ["snmalloc-fuzzer.cpp"],
    copts = [
        "-fsanitize=address",
    ] + select({
        "@bazel_tools//tools/cpp:clang-cl": ["-fexperimental-library"],  # needed for std::execution::unseq,
        "//conditions:default": ["-mcx16"],
    }),
    defines = [
        "SNMALLOC_USE_WAIT_ON_ADDRESS=0",
        "ADDRESS_SANITIZER",
    ],
    linkstatic = True,
    deps = [
        "@fuzztest//fuzztest",
        "@fuzztest//fuzztest:fuzztest_gtest_main",
    ],
)
